--- a/css/styles.css
+++ b/css/styles.css
@@ -36,11 +36,18 @@ th {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+
+  font-weight: 500;
 }
 
 .subtitle-text {
   font-size: 150%;
   line-height: 23px;
+  color: #343951; /* gray-3*/
+}
+
+.subtitle-more {
+  color: #858a9d; /* gray-1 */
 }
 
 /* Removing browser's default margin and padding */
@@ -53,9 +60,9 @@ body {
 /* ------------------------------------------------------- */
 .app {
   display: grid;
-  grid-template-columns: 1.3fr 5fr 2fr;
+  grid-template-columns: 1.1fr 6fr 2fr;
   grid-template-areas: "sidebar content actions";
-  gap: 30px;
+  /* gap: 30px; */ /* no gap */
 
   height: 100vh;
 
@@ -78,13 +85,14 @@ body {
 .actions {
   grid-area: actions;
   background-color: #f5f6fc;
+  border-left: 1px solid #c8ccdb;
 }
 /* ------------------------------------------------------- */
 /* SIDEBAR */
 /* ------------------------------------------------------- */
 .sidebar {
   display: grid;
-  grid-template-rows: 1fr 3fr 3fr;
+  grid-template-rows: 1fr 3fr 6fr;
   grid-template-areas:
     "logo"
     "menu"
@@ -97,8 +105,8 @@ body {
 }
 
 .logo-grade {
-  width: 55%;
-  height: 35%;
+  width: 100%;
+  height: 100%;
   background: linear-gradient(270deg, #689ef8 0%, #ff6860 56.25%, #ff9f00 100%);
   border-radius: 5px;
 }
@@ -111,7 +119,8 @@ body {
   flex-direction: column;
   justify-content: space-between;
 
-  border-bottom: 1px solid #464c61;
+  font-weight: 500;
+  /* border-bottom: 1px solid #464c61; */
 }
 
 .menu-item {
@@ -127,10 +136,10 @@ body {
 .menu-item--selected-badge {
   position: absolute;
   width: 80px;
-  height: 60px;
+  height: 35px;
   border-radius: 7px;
   background-color: #ffffff;
-  left: -70px;
+  left: -75px;
 }
 
 .menu-item > span {
@@ -151,7 +160,7 @@ body {
   width: 80%;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
 
   position: relative;
@@ -160,17 +169,18 @@ body {
 /* Tooltip options */
 .options-btn .tooltip {
   visibility: visible;
-  width: 150px;
+  width: 85%;
   background-color: #464c61;
-  color: #bec0c8;
+  font-size: 80%;
+  color: #f5f6fc;
   text-align: left;
   padding: 10%;
-  border-radius: 6px;
+  border-radius: 8px;
 
   /* Position the tooltip content */
   position: absolute;
-  bottom: 100%;
-  left: 10%;
+  bottom: 130%;
+  left: 0%;
   margin-bottom: 5%;
   z-index: 1;
 
@@ -198,29 +208,39 @@ body {
 .tooltip-item {
   display: flex;
   flex-direction: row;
+  align-items: center;
+  margin-bottom: 5px;
 }
+.tooltip-item > span {
+  margin-left: 8px;
+}
+
 /* ------------------------------------------------------- */
 /* CONTENT */
 /* ------------------------------------------------------- */
 .content {
-  padding: 20px;
+  padding: 3% 4%;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 /* An input value expanded inside a row div */
 .searchbar {
   display: flex;
   flex-direction: row;
-  padding: 16px;
+  padding: 8px 16px;
   background-color: #ffffff;
-  border-radius: 5px;
+
+  border: 1px solid #c8ccdb;
+  box-sizing: border-box;
+  border-radius: 8px;
 }
 
 .searchbar > input {
   width: 100%;
   border: none;
+  margin-left: 16px;
 }
 
 .files-row {
@@ -238,6 +258,10 @@ body {
 
 .files-table > tbody > tr {
   background-color: #ffffff;
+}
+
+.files-table th:first-child {
+  width: 70%;
 }
 
 /* Set border-radius on the top-left and bottom-left of the first table data on the table row */
@@ -260,21 +284,21 @@ body {
 }
 
 /* "Shared with me" files widget */
-.small-file-widget {
+.short-file-widget {
   flex-grow: 1; /* to expand inside flex row of widgets */
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 3fr 1fr 1fr;
+  grid-template-columns: 1fr 3fr 1fr;
+  grid-template-rows: 2.5fr 2fr 1fr;
   grid-template-areas:
-    "file-icon file-users"
-    "file-name file-name"
-    "file-creation file-creation";
+    "file-icon  ... file-users"
+    "file-name  file-name file-name"
+    "file-creation file-creation file-creation";
 
-  padding: 10px;
+  padding: 24px;
   margin: 15px;
   background: #ffffff;
-  box-shadow: 0px 4px 16px rgba(58, 58, 58, 0.07);
-  border-radius: 12px;
+  box-shadow: 0px 4px 16px rgba(200, 204, 219, 0.5);
+  border-radius: 16px;
 }
 
 .file-icon {
@@ -282,33 +306,42 @@ body {
 }
 .file-users {
   grid-area: file-users;
-  align-items: center;
 }
 .file-name {
   grid-area: file-name;
+  font-weight: 500;
 }
 .file-creation {
   grid-area: file-creation;
-  color: #858a9d;
   font-size: 70%;
+  display: flex;
+}
+.file-creation .file-creation-label {
+  color: #858a9d;
+  margin-right: 2%;
+}
+
+.file-creation .file-creation-date {
+  color: #343951;
 }
 
 /* "Recently Used" files widget */
 .big-file-widget {
   flex-grow: 1; /* to expand inside flex row of widgets */
   display: grid;
-  grid-template-columns: 1fr 1fr 0.1fr;
+  grid-template-columns: 1fr 3fr 0.1fr;
   grid-template-rows: 6fr 2fr 1fr;
   grid-template-areas:
     "file-icon file-users file-options-vertical"
     "file-name file-name file-name"
     "file-creation file-creation file-creation";
 
-  padding: 15px;
+  padding: 24px;
   margin: 15px;
   background: #ffffff;
-  box-shadow: 0px 4px 16px rgba(58, 58, 58, 0.07);
-  border-radius: 12px;
+
+  box-shadow: 0px 4px 16px rgba(200, 204, 219, 0.5);
+  border-radius: 16px;
 }
 
 .file-options-vertical {
@@ -325,34 +358,39 @@ body {
 */
 .actions {
   display: grid;
-  gap: 3%;
-  grid-template-rows: 1fr 8fr 3fr;
+  gap: 4%;
+  grid-template-rows: 1fr 6fr 2fr;
   grid-template-areas:
     "user"
     "storage"
     "premium";
+
+  padding: 0 34px;
 }
 
 .user {
   grid-area: user;
-  padding: 0 34px;
 
   display: flex;
   justify-content: space-between;
   align-items: center;
-
-  border-bottom: 1px solid #e0e7f1;
 }
 
 .user-profile,
 .blocks {
   display: inherit;
   align-items: inherit;
+  color: #858a9d;
+  font-weight: 500;
+}
+
+.blocks > *,
+.user-profile > * {
+  margin-left: 8px;
 }
 
 .storage {
   grid-area: storage;
-  padding: 0 34px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -371,7 +409,7 @@ body {
   with a white cirle on top to simulate a donut chart
 */
 
-.donut-chart {
+/* .donut-chart {
   width: 200px;
   height: 200px;
 
@@ -390,6 +428,24 @@ body {
     #689ff8 360deg
   );
   margin: 15px 0;
+} */
+.chart-text {
+  transform: translateY(0.15em);
+}
+
+.chart-number {
+  font-size: 40%;
+  line-height: 1;
+  text-anchor: middle;
+  transform: translateY(-0.3em);
+  fill: #000;
+}
+
+.chart-label {
+  font-size: 30%;
+  text-anchor: middle;
+  transform: translateY(0.75em);
+  fill: #858a9d;
 }
 
 .donut-text {
@@ -428,7 +484,7 @@ body {
   display: flex;
   flex-direction: column;
   display: grid;
-  grid-template-columns: 0.5fr 2fr;
+  grid-template-columns: 0.6fr 2fr;
   grid-template-rows: 2fr 1fr;
   grid-template-areas:
     "storage-table-icon storage-table-types"
@@ -444,6 +500,7 @@ body {
 
 .storage-table-types {
   grid-area: storage-table-types;
+  font-size: 80%;
 }
 .storage-table-files {
   grid-area: storage-table-files;
@@ -453,13 +510,13 @@ body {
 
 .storage-table-gb {
   color: #343951;
+  font-size: 80%;
   font-weight: 500;
   text-align: right;
 }
 
 .premium {
   grid-area: premium;
-  padding: 0 34px;
 }
 
 .premium-container {
@@ -475,7 +532,7 @@ body {
 }
 
 .premium-logo {
-  width: 50%;
+  width: 80%;
   height: 73px;
   background: linear-gradient(
     270.15deg,
@@ -497,34 +554,33 @@ body {
   color: #fff;
 }
 
-[class*="square-"] {
-  width: 15px;
-  height: 15px;
-  margin-right: 10px;
+[class*="large"] {
+  width: 40px;
+  height: 40px;
 }
 
-[class*="large"] {
-  width: 50px;
-  height: 50px;
+[class*="small"] {
+  width: 16px;
+  height: 16px;
 }
 
 [class*="circle-"] {
-  width: 30px;
-  height: 30px;
+  width: 24px;
+  height: 24px;
   margin-left: 10px;
 
   border-radius: 50%;
 }
 
 [class*="squircle-"] {
-  width: 30px;
-  height: 30px;
+  width: 24px;
+  height: 24px;
 
   display: flex;
   justify-content: center;
   align-items: center;
 
-  border-radius: 5px;
+  border-radius: 4px;
 }
 
 /* Overlaping grid */
@@ -541,7 +597,8 @@ body {
   grid-column: 1;
   grid-row: 1;
   z-index: 1;
-  margin-left: 15px;
+  margin-left: 10px;
+  border-radius: 4px;
 
   display: flex;
   justify-content: center;
@@ -549,41 +606,48 @@ body {
 }
 
 .sqr-overlap--bot {
-  margin-top: 10px;
   grid-column: 1;
   grid-row: 1;
+
+  margin-top: 8px;
+  border-radius: 4px;
+  opacity: 0.4;
 }
 
 /* circles - overlaping for user icons */
-
-.cir-overlap--top {
-  grid-column: 1;
-  grid-row: 1;
-  z-index: 1;
-  margin-left: 30px;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
 
 .cir-overlap--bot {
   grid-column: 1;
   grid-row: 1;
 }
 
+.cir-overlap--top {
+  grid-column: 1;
+  grid-row: 1;
+  z-index: 1;
+  margin-left: 25px;
+}
+
+.cir-overlap--top2 {
+  grid-column: 1;
+  grid-row: 1;
+  z-index: 2;
+  margin-left: 40px;
+}
+
+.cir-overlap--container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  font-size: 70%;
+  color: #ffffff;
+}
+
 /* COLORS */
 
 [class*="border-white"] {
-  border: 1px solid #ffffff;
-}
-
-[class*="border-black"] {
-  border: 1px solid #343951;
-}
-
-[class*="border-cloud"] {
-  border: 1px solid #c4c4c4;
+  border: 2px solid #ffffff;
 }
 
 [class*="border-mist"] {
@@ -595,7 +659,15 @@ body {
 }
 
 [class*="gray"] {
-  background-color: #c4c4c4;
+  background-color: #a6aabb;
+}
+
+[class*="gray-1"] {
+  background-color: #858a9d;
+}
+
+[class*="gray+1"] {
+  background-color: #c8ccdb;
 }
 
 [class*="green"] {
@@ -614,10 +686,6 @@ body {
   background-color: #689ff8;
 }
 
-[class*="yellow"] {
+[class*="orange"] {
   background-color: #ff9f00;
-}
-
-[class*="banana"] {
-  background-color: #ffd999;
 }
