--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,7 @@ table {
 /* Padding to the cells */
 tr > th,
 tr > td {
-  padding: 14px;
+  padding: 12px;
 }
 
 /* Overwrite default bold font weight from table header to normal */
@@ -52,7 +52,7 @@ th {
 }
 
 /* Removing browser's default margin and padding */
-body {
+* {
   margin: 0;
   padding: 0;
 }
@@ -220,7 +220,8 @@ body {
 /* CONTENT */
 /* ------------------------------------------------------- */
 .content {
-  padding: 3% 4%;
+  overflow: auto;
+  padding: 2% 4% 0% 4%;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -251,7 +252,6 @@ body {
 
 .files-table {
   color: #858a9d;
-
   text-align: left;
   vertical-align: middle;
   border-spacing: 0 15px;
@@ -358,6 +358,7 @@ body {
   for the profile, storage and premium button
 */
 .actions {
+  overflow: auto;
   display: grid;
 
   grid-template-rows: 1fr 5fr 2fr;
@@ -561,8 +562,8 @@ body {
 }
 
 [class*="small"] {
-  width: 16px;
-  height: 16px;
+  width: 16px !important;
+  height: 16px !important;
 }
 
 [class*="circle-"] {
