--- a/css/styles.css
+++ b/css/styles.css
@@ -42,9 +42,11 @@ th {
 }
 
 .subtitle-text {
-  font-size: 150%;
+  /* font-size: 150%; */
+  font-size: 24px;
   line-height: 23px;
   color: #343951; /* gray-3*/
+  font-weight: 500;
 }
 
 .subtitle-more {
@@ -93,11 +95,13 @@ th {
 /* ------------------------------------------------------- */
 .sidebar {
   display: grid;
-  grid-template-rows: 1fr 3fr 6fr;
+  grid-template-rows: 1fr 3.5fr 6fr;
   grid-template-areas:
     "logo"
     "menu"
     "options";
+
+  font-size: 16px;
 }
 
 .logo {
@@ -121,7 +125,6 @@ th {
   justify-content: space-between;
 
   font-weight: 500;
-  /* border-bottom: 1px solid #464c61; */
 }
 
 .menu-item {
@@ -137,8 +140,8 @@ th {
 .menu-item--selected-badge {
   position: absolute;
   width: 80px;
-  height: 35px;
-  border-radius: 7px;
+  height: 24px;
+  border-radius: 4px;
   background-color: #ffffff;
   left: -75px;
 }
@@ -172,7 +175,8 @@ th {
   visibility: visible;
   width: 85%;
   background-color: #464c61;
-  font-size: 80%;
+  /* font-size: 80%; */
+  font-size: 10px;
   color: #f5f6fc;
   text-align: left;
   padding: 10%;
@@ -243,6 +247,7 @@ th {
   width: 100%;
   border: none;
   margin-left: 16px;
+  font-size: 16px;
 }
 
 .files-row {
@@ -257,8 +262,13 @@ th {
   border-spacing: 0 15px;
 }
 
+.files-table th {
+  font-size: 10px;
+}
+
 .files-table > tbody > tr {
   background-color: #ffffff;
+  font-size: 16px;
 }
 
 .files-table th:first-child {
@@ -311,10 +321,17 @@ th {
 .file-name {
   grid-area: file-name;
   font-weight: 500;
+  font-size: 16px;
+  color: #343951;
 }
+.short-file-widget > .file-name {
+  font-weight: normal;
+}
+
 .file-creation {
   grid-area: file-creation;
-  font-size: 70%;
+  /* font-size: 70%; */
+  font-size: 10px;
   display: flex;
 }
 .file-creation .file-creation-label {
@@ -487,7 +504,7 @@ th {
   flex-direction: column;
   display: grid;
   grid-template-columns: 0.6fr 2fr;
-  grid-template-rows: 2fr 1fr;
+  grid-template-rows: 1.5fr 1fr;
   grid-template-areas:
     "storage-table-icon storage-table-types"
     "storage-table-icon storage-table-files";
@@ -546,12 +563,17 @@ th {
   margin-bottom: 10%;
 }
 
+.premium-text {
+  color: #464c61;
+  font-weight: 500;
+}
+
 /* UTILS FOR THE MOCKUP */
 /* SQUARES AND CIRCLES */
 
 [class*="button-"] {
   margin-top: 10px;
-  padding: 10px 20px;
+  padding: 8px 16px;
   border-radius: 7px;
   color: #fff;
 }
