--- a/css/styles.css
+++ b/css/styles.css
@@ -63,7 +63,7 @@ th {
 /* ------------------------------------------------------- */
 .app {
   display: grid;
-  grid-template-columns: 1.1fr 6fr 2fr;
+  grid-template-columns: 1.2fr 6fr 2fr;
   grid-template-areas: "sidebar content actions";
   /* gap: 30px; */ /* no gap */
 
@@ -164,7 +164,7 @@ th {
   width: 80%;
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
 
   position: relative;
@@ -218,6 +218,10 @@ th {
 }
 .tooltip-item > span {
   margin-left: 8px;
+}
+
+.options-btn > img {
+  height: 18px;
 }
 
 /* ------------------------------------------------------- */
@@ -299,7 +303,7 @@ th {
   flex-grow: 1; /* to expand inside flex row of widgets */
   display: grid;
   grid-template-columns: 1fr 3fr 1fr;
-  grid-template-rows: 2.5fr 2fr 1fr;
+  grid-template-rows: 3fr 2.5fr 1fr;
   grid-template-areas:
     "file-icon  ... file-users"
     "file-name  file-name file-name"
@@ -378,7 +382,7 @@ th {
   overflow: auto;
   display: grid;
 
-  grid-template-rows: 1fr 5fr 2fr;
+  grid-template-rows: 1fr 5fr 2.5fr;
   grid-template-areas:
     "user"
     "storage"
@@ -494,6 +498,10 @@ th {
   border-bottom: 1px solid #e0e7f1;
 }
 
+.storage-table > tbody > tr:last-child {
+  border: none;
+}
+
 /* 
   Dividing the storage table container in 2 columns and 2 rows
   for Documents types, ammount of files and icon
@@ -536,6 +544,9 @@ th {
 
 .premium {
   grid-area: premium;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .premium-container {
