--- a/css/styles.css
+++ b/css/styles.css
@@ -63,7 +63,7 @@ th {
 /* ------------------------------------------------------- */
 .app {
   display: grid;
-  grid-template-columns: 1.2fr 6fr 2fr;
+  grid-template-columns: 1.3fr 6fr 2fr;
   grid-template-areas: "sidebar content actions";
   /* gap: 30px; */ /* no gap */
 
@@ -95,7 +95,7 @@ th {
 /* ------------------------------------------------------- */
 .sidebar {
   display: grid;
-  grid-template-rows: 1fr 3.5fr 6fr;
+  grid-template-rows: 1.15fr 2.75fr 6fr;
   grid-template-areas:
     "logo"
     "menu"
@@ -110,16 +110,18 @@ th {
 }
 
 .logo-grade {
+  /* width: 100%;
+  height: 100%; */
   width: 100%;
   height: 100%;
   background: linear-gradient(270deg, #689ef8 0%, #ff6860 56.25%, #ff9f00 100%);
-  border-radius: 5px;
+  border-radius: 8px;
 }
 
 /* The menu consists in a flex column */
 .menu {
   grid-area: menu;
-  padding: 32px;
+  padding: 0 32px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -256,6 +258,7 @@ th {
 
 .files-row {
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
 }
 
@@ -488,6 +491,7 @@ th {
 
 .storage-used {
   color: #858a9d;
+  font-size: 10px;
 }
 
 .storage-table {
@@ -527,43 +531,49 @@ th {
 
 .storage-table-types {
   grid-area: storage-table-types;
-  font-size: 80%;
+  /* font-size: 80%; */
+  font-size: 10px;
 }
 .storage-table-files {
   grid-area: storage-table-files;
   color: #858a9d;
-  font-size: 70%;
+  font-weight: 500;
+  /* font-size: 70%; */
+  font-size: 8px;
 }
 
 .storage-table-gb {
   color: #343951;
-  font-size: 80%;
+  /* font-size: 80%; */
+  font-size: 8px;
   font-weight: 500;
   text-align: right;
 }
 
 .premium {
+  width: auto;
+  height: 216px;
   grid-area: premium;
   display: flex;
   justify-content: center;
-  align-items: center;
+  /* align-items: center; */
 }
 
 .premium-container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-evenly;
 
-  padding: 16px 38px;
+  padding: 16px 16px;
 
   background: #ffffff;
-  border-radius: 18px;
+  border-radius: 16px;
 }
 
 .premium-logo {
-  width: 80%;
-  height: 73px;
+  width: 208px;
+  height: 48px;
   background: linear-gradient(
     270.15deg,
     #689ff8 0.15%,
@@ -571,7 +581,6 @@ th {
     #ff9f00 99.9%
   );
   border-radius: 11px;
-  margin-bottom: 10%;
 }
 
 .premium-text {
@@ -583,7 +592,6 @@ th {
 /* SQUARES AND CIRCLES */
 
 [class*="button-"] {
-  margin-top: 10px;
   padding: 8px 16px;
   border-radius: 7px;
   color: #fff;
